# coconut-audit

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_quickstart.ipynb  02_xss_safety.ipynb
src/coconut_audit/: __init__.py
src/coconut_audit/audit/: __init__.py  drift.py  shortcut.py  steering.py  verdict.py
src/coconut_audit/cli/: __init__.py  main.py
src/coconut_audit/core/: __init__.py  config.py  types.py
src/coconut_audit/mcp/: __init__.py  pipeline.py  server.py  tools.py
src/coconut_audit/probe/: __init__.py  client.py  extractor.py  registry.py
src/coconut_audit/reports/: __init__.py  html.py  json_emit.py  jsonl.py
src/coconut_audit/sae/: __init__.py  base.py  linear.py  loader.py  projector.py
tests/: conftest.py  test_smoke.py
tests/unit/: test_audit.py  test_cli.py  test_core.py  test_mcp.py  test_probe.py  test_reports.py  test_sae.py
