[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coconut-audit"
version = "0.1.0.post1"
description = "Audit harness for continuous-latent chain-of-thought (Coconut / Quiet-STaR / TTC) — SAE-grounded steering & shortcut probes with an MCP server."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "hinanohart"}]
keywords = [
    "mechanistic-interpretability",
    "sparse-autoencoder",
    "coconut",
    "continuous-latent-reasoning",
    "chain-of-thought",
    "alignment",
    "audit",
    "mcp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.4",
    "transformers>=4.45",
    "huggingface-hub>=0.26",
    "safetensors>=0.4",
    "pydantic>=2.7",
    "numpy>=1.26",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "click>=8.1",
    "mcp>=1.0",
]

[project.optional-dependencies]
saelens = ["sae-lens>=4.0"]
sparsify = ["sparsify>=0.1"]
datasets = ["datasets>=2.20"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "pyright>=1.1",
    "ipykernel>=6.29",
]

[project.scripts]
coconut-audit = "coconut_audit.cli.main:cli"
coconut-audit-mcp = "coconut_audit.mcp.server:main"

[project.urls]
Homepage = "https://github.com/hinanohart/coconut-audit"
Issues = "https://github.com/hinanohart/coconut-audit/issues"
Changelog = "https://github.com/hinanohart/coconut-audit/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/coconut_audit"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: tests that download HF artifacts or run >5s",
    "integration: end-to-end audit pipeline tests",
]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
